--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>movie-choise</title>
+    
 </head>
-<body>
 
-<div id="root"></div>
+<body> 
+    <div id="root"></div>
+    <script src="/bundle.js"></script>
 </body>
+
 </html>
